@@ -48,6 +48,13 @@ describe ReplaceArraysWithSingleCellsAst do
   r.ref = [:sheet1, :B3]
   r.map(sumifsast).should == sumifsast_result
 
+
+  ast_vertical =  [:array, [:row, [:sheet_reference, :"sheet1", [:cell, :"A2"]]], [:row, [:sheet_reference, :"sheet1", [:cell, :"A3"]]]]
+  if_ast = [:function, :IF, [:boolean_true], ast_vertical, ast_vertical]
+  r.ref = [:sheet1, :B3]
+  r.map(if_ast).should == [:function, :IF, [:boolean_true], [:sheet_reference, :sheet1, [:cell, :A3]], [:sheet_reference, :sheet1, [:cell, :A3]]]
+
+
   end
 
 end
